# Loop-Core-Engineering

./: CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM.md  LAUNCH-CHECKLIST.md  PLAN.md  README.md  SECURITY.md  STATUS.md  SYNC.md  pyproject.toml
.github/workflows/: validate.yml
examples/: multi-agent-loop.yaml  research-loop.yaml
rfcs/: README.md
specs/: failure-taxonomy.md  les-1.0.md  loop-ids.md  lss-1.0.md  lss-1.0.schema.json  lss-1.1-composition.schema.json  lss-1.1-draft.md  lss-1.1.md  schema-versioning.md
templates/: rfc-template.md
tools/: les_calculator.py  validate_all_examples.py  validate_lss.py
