[project]
name = "loop-engineering-core"
version = "1.0.0"
description = "Canonical LSS, LES, and Loop ID specifications for Loop Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 100
target-version = "py312"
