[project]
name = "loop-engineering-core"
version = "1.0.0"
description = "Canonical LSS, LES, and Loop ID specifications for Loop Engineering"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kanak Malpani" }]
keywords = ["loop-engineering", "lss", "les", "agents", "specifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/KanakMalpani/Loop-Core-Engineering"
Repository = "https://github.com/KanakMalpani/Loop-Core-Engineering"
Documentation = "https://github.com/KanakMalpani/Loop-Core-Engineering/blob/main/specs/lss-1.0.md"
"LoopNet" = "https://github.com/KanakMalpani/loopnet"
"LoopGym" = "https://github.com/KanakMalpani/LoopGym"
"LoopBench" = "https://github.com/KanakMalpani/LoopBench"

dependencies = [
    "jsonschema>=4.21",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py312"
